tests/suite/snapshots/all__suite__group44_test__incremental_build_no_changes.snap
---
source: tests/suite/group44_test.rs
expression: "normalize_output(&run(&dest, &[\"build\"])?, &dest)"
---
    Validating lib
    Validating lib-annotations
Compiled in <TIME>s
Compiling using incremental build (0 stale files)
Syncing dependencies
