tests/suite/snapshots/all__suite__group44_test__stale_after_incremental_build.snap
---
source: tests/suite/group44_test.rs
expression: "normalize_output(&run(&dest, &[\"build\", \"stale\"])?, &dest)"
---
    Validating lib
    Validating lib-annotations
Stale 0 files to recompile
Syncing dependencies
